@startuml evolution_classdiagram

hide methods

class Simulation {
    epochs_count: int
    epoch_duration: int
    evolution_threshold: float
}

class Robot {
    body: EPuck
    cortex: Cortex
    thalamus: Thalamus
}
class Individual
class Biography {
    stimulus: List[Dict[str, float]]
    response: List[Dict[str, float]]
}
class Fitness {
    robot: EPuck /'TODO maybe its better individual'/
    +update()
    +value(): float
}

enum Tasks {
    AREA_AVOIDANCE: Task
    COLLISION_AVOIDANCE: Task
    RUN: Task
    T_MAZE: Task
}
class Task {
    life_manager: Callable[[Individual, int], None]
    evaluator: Callable[[EPuck], Fitness]
    sensors: Tuple[str]
}

Simulation o-- Individual
Simulation o-- Task

Robot <|-- Individual
Individual *-- Biography

Biography *-- Fitness

Tasks o-- Task

hide Individual member
show Fitness methods

@enduml
